testsuite/tests/typecheck/should_fail/T14884.hs
module T14884 where

x :: IO ()
x = _ print "abc"
