testsuite/tests/typecheck/should_fail/T14884.stderr

T14884.hs:4:5: error:
    • Found hole: _ :: (a0 -> IO ()) -> [Char] -> IO ()
      Where: ‘a0’ is an ambiguous type variable
    • In the expression: _
      In the expression: _ print "abc"
      In an equation for ‘x’: x = _ print "abc"
    • Relevant bindings include x :: IO () (bound at T14884.hs:4:1)
      Valid substitutions include
        foldMap :: forall (t :: * -> *).
                   Foldable t =>
                   forall m a. Monoid m => (a -> m) -> t a -> m
          (imported from ‘Prelude’ at T14884.hs:1:8-13
           (and originally defined in ‘Data.Foldable’))
        mapM_ :: forall (t :: * -> *) (m :: * -> *) a b.
                 (Foldable t, Monad m) =>
                 (a -> m b) -> t a -> m ()
          (imported from ‘Prelude’ at T14884.hs:1:8-13
           (and originally defined in ‘Data.Foldable’))
        ($) :: forall a b. (a -> b) -> a -> b
          (imported from ‘Prelude’ at T14884.hs:1:8-13
           (and originally defined in ‘GHC.Base’))
        ($!) :: forall a b. (a -> b) -> a -> b
          (imported from ‘Prelude’ at T14884.hs:1:8-13
           (and originally defined in ‘GHC.Base’))
        id :: forall a. a -> a
          (imported from ‘Prelude’ at T14884.hs:1:8-13
           (and originally defined in ‘GHC.Base’))

T14884.hs:4:7: error:
    • Ambiguous type variable ‘a0’ arising from a use of ‘print’
      prevents the constraint ‘(Show a0)’ from being solved.
      Probable fix: use a type annotation to specify what ‘a0’ should be.
      These potential instances exist:
        instance (Show a, Show b) => Show (Either a b)
          -- Defined in ‘Data.Either’
        instance Show Ordering -- Defined in ‘GHC.Show’
        instance Show Integer -- Defined in ‘GHC.Show’
        ...plus 23 others
        ...plus 65 instances involving out-of-scope types
        (use -fprint-potential-instances to see them all)
    • In the first argument of ‘_’, namely ‘print’
      In the expression: _ print "abc"
      In an equation for ‘x’: x = _ print "abc"
